# uchu-p

./: CMakeLists.txt  README.md
src/: main.cpp
src/game/: asset.h  key_binding.h  level.cpp  level.h  uchu.cpp  uchu.h
src/game/component/: action.h  box.cpp  box.h  input.cpp  input.h  lifetime.cpp  lifetime.h  position.cpp  position.h  sprite.cpp  sprite.h  velocity.cpp  velocity.h
src/game/component/player/: shoot.h
src/game/entity/: bullet.cpp  bullet.h  player.cpp  player.h
src/game/system/: cleanSystem.cpp  cleanSystem.h  graphicSystem.cpp  graphicSystem.h  inputSystem.cpp  inputSystem.h  movementSystem.cpp  movementSystem.h  system.h
src/lib/: graphic.h  logger.h  sound.h
src/lib/ecs/: ecs.cpp  ecs.h
src/lib/window/: window_graphic.cpp  window_logger.cpp  window_sound.cpp
